@@ -1,3 +1,8 @@
+Sat Apr 30 17:49:05 EEST 2005 Pekka Riikonen <priikone@silcnet.org>
+
+	* The 'noprocess' directive now works recursively with
+	  directories.
+
 Sat Apr 30 11:49:01 EEST 2005 Pekka Riikonen <priikone@silcnet.org>
 
 	* Added better debug messages.
